# Grew-TSE

./: .gitignore  .readthedocs.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: about.rst  conf.py  example.rst  grewtse.evaluator.rst  grewtse.evaluators.rst  grewtse.metrics.rst  grewtse.preprocessing.rst  grewtse.rst  grewtse.utils.rst  grewtse.visualise.rst  index.rst  installation.rst  introduction.rst  issues.rst  usage.rst
docs/source/_static/: custom.css
examples/: croatian-verb-agreement.py  irish_relative_clause.py  pipeline.py  polish_genitive_of_negation.py  test_grew.py
examples/grew/: Rel_Clause_Ecl_Obj_UD_Irish-IDT@2.16.conllu  Rel_Clause_Len_Subj_UD_Irish-IDT@2.16.conllu  Rel_Clause_Noun_UD_Irish-TwittIrish@2.16.conllu  Relative_Clause_UD_Irish_Twitter@2.16.conllu  grew-query.grs  spanish_subjunctive_testset.conllu
scripts/: exp_polish_negation.py
src/gradio-app/: app.py  spanish-test-sm.conllu
src/gradio-app/datasets/: Polish-Test-Treebank.conllu
src/grewtse/: pipeline.py
src/grewtse/evaluators/: __init__.py  evaluator.py  metrics.py  perplexity.py
src/grewtse/preprocessing/: conllu_parser.py  grew_dependencies.py  reconstruction.py
src/treetse/: pipeline.py
tests/: test_conllu_parser.py  test_dependencies.py  test_evaluator.py  test_full.py  test_pipeline_english.py  test_pipeline_spanish_sm.py  test_preprocessing.py
tests/output/: exceptions.csv  lexicon.csv  masked_dataset.csv
treetse/preprocessing/: reconstruction.py
wsl-venv/: pyvenv.cfg
(+8 files in other folders)
