[project]
name = "grewtse"
version = "0.1.0"
description = "A library for TSE evaluation using treebank datasets"
authors = [{ name = "Daniel Gallagher", email = "daniel.gallagher.js@gmail.com" }]
readme = "README.md"

dependencies = [
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]